--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="author" content="">
-	
-	<title>Swann Planning</title>
+
+	<meta name="description" content="Swann Planning - Premier Event Planning for the Washington, DC area. Events, Corporate Events, Parties, Weddings, and Celebrations.">
+	<meta name="keywords" content="events,weddings,parties,celebrations,corporate events, washington, dc, event planning, event planner">
+
+	<title>Swann Planning - DC's Premier Event Planner</title>
 	
 	<!-- CSS -->
 	<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -63,64 +64,27 @@
 
 	<!-- Home start -->
 	<section id="home" class="home-section home-parallax">
-
 		<div class="hero-slider">
 			<ul class="slides">
-
 				<li class="bg-dark-30 bg-dark" style="background-image:url(assets/images/section-1.jpg)">
 					<div class="hs-caption">
 						<div class="caption-content">
-							<!--<div class="hs-title-size-1 font-alt mb-30">-->
-								<!--DC's Premier Event Coordinator-->
-							<!--</div>-->
               <div id="transform">
                 <img class="purple-transform" src="assets/images/logos/swann_planning_logo_colored_light_short.png">
                 <img class="white-transform" src="assets/images/logos/swann_planning_logo_white_short.png">
               </div>
-							<!--<a href="#about" class="section-scroll btn btn-border-w btn-round">Learn More</a>-->
 						</div>
 					</div>
 				</li>
-
-				<!--<li class="bg-dark-60 bg-dark" style="background-image:url(assets/images/section-3.jpg)">-->
-					<!--<div class="hs-caption">-->
-						<!--<div class="caption-content">-->
-							<!--<div class="hs-title-size-2 font-alt mb-30">-->
-								<!--Swann Planning is a full service agency providing design, planning,<br>-->
-								<!--and production for events in Washington, D.C. and beyond. Swannn<br>-->
-								<!--Planning services cater to weddings, monumental celebrations, and corporate events.-->
-							<!--</div>-->
-							<!--<a href="#about" class="section-scroll btn btn-mod btn-border-w btn-round btn-medium">Learn More</a>-->
-						<!--</div>-->
-					<!--</div>-->
-				<!--</li>-->
-
-				<!--<li class="bg-dark-30 bg-dark" style="background-image:url(assets/images/section-21.jpg)">-->
-					<!--<div class="hs-caption">-->
-						<!--<div class="caption-content">-->
-							<!--<div class="hs-title-size-1 font-alt mb-30">-->
-								<!--We build brands that build business-->
-							<!--</div>-->
-							<!--<div class="hs-title-size-3 font-alt mb-40">-->
-								<!--We are Amazing-->
-							<!--</div>-->
-							<!--<a href="#about" class="section-scroll btn btn-border-w btn-circle">Learn More</a>-->
-						<!--</div>-->
-					<!--</div>-->
-				<!--</li>-->
-
 			</ul>
 		</div>
-
 	</section >
 	<!-- Home end -->
 
 	<!-- Wrapper start -->
 	<div class="main">
-
 		<!-- About start -->
 		<section id="about" class="about-section about-parallax ">
-
 			<div class="row">
 				<h2 class="module-title story-title font-alt">Swann Story</h2>
 				<div class="col-sm-8 col-sm-offset-2">
@@ -136,32 +100,24 @@
             Swann events are special moments for clients, but also for the agency. Swann Planning takes pride in exceeding expectations
             through premier design, exemplary customer service, and relationships with trusted, highly-regarded vendors.
 					</div>
-
 				</div>
 
 				<div class="col-sm-8 col-sm-offset-2">
-
 					<div class="module-subtitle story font-serif">
 						“Swann Planning strives to positively impact lives not only during the event, but more importantly in the future. I truly feel accomplished when people take time to
 						reminisce about the amazing time they had at a Swann Planning event.”<br/>
 
 						- India Howard, Founder/CEO
 					</div>
-
 				</div>
-
 			</div><!-- .row -->
 
 			<div class="row">
-
 				<div class="col-sm-2 col-sm-offset-5">
-
 					<div class="large-text align-center">
 						<a href="#features" class="section-scroll"><i class="fa fa-angle-down"></i></a>
 					</div>
-
 				</div>
-
 			</div>
 		</section>
 		<!-- About end -->
@@ -170,52 +126,36 @@
 		<hr class="divider-w">
 		<!-- Divider -->
 
-		<!-- Video start -->
 		<section class="module bg-dark-60" data-background="assets/images/section-6.jpg">
 			<div class="container">
-
 				<div class="row">
-
-				</div><!-- .row -->
-
+				</div>
 			</div>
 		</section>
-		<!-- Video end -->
 
 		<!-- Portfolio start -->
 		<section id="services" class="module pb-0">
 			<div class="container">
-
 				<div class="row">
-
 					<div class="col-sm-6 col-sm-offset-3">
-
 						<h2 class="module-title font-alt">What We Offer</h2>
-
 					</div>
-
 				</div><!-- .row -->
 
 				<div class="row">
-
 					<div class="col-sm-12">
-
 						<ul id="filters" class="filter font-alt hidden-xs">
 							<li><a href="#" data-filter="*" class="current wow fadeInUp">All</a></li>
 							<li><a href="#" data-filter=".weddings" class="wow fadeInUp" data-wow-delay="0.2s">Weddings</a></li>
 							<li><a href="#" data-filter=".celebrations" class="wow fadeInUp" data-wow-delay="0.4s">Celebrations</a></li>
 							<li><a href="#" data-filter=".corporate" class="wow fadeInUp" data-wow-delay="0.6s">Corporate</a></li>
 						</ul>
-
 					</div>
-
 				</div><!-- .row -->
-
 			</div><!-- .container -->
 
 			<!-- Portfolio list start -->
 			<ul id="works-grid" class="works-grid works-grid-gut works-grid-3 works-hover-w">
-
 				<!-- Portfolio item start -->
 				<li class="work-item weddings">
 					<a href="profiles/weddings/premier_planning.html">
@@ -676,12 +616,6 @@
       </div>
     </section>
 		<!-- Contact end -->
-
-		<!-- Map start -->
-		<!--<section id="map-section">-->
-			<!--<div id="map"></div>-->
-		<!--</section>-->
-		<!-- Map end -->
 
 		<!-- Widgets start -->
 		<div class="module-small bg-dark">
