--- a/profiles/about.html
+++ b/profiles/about.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="About Swann Planning - Premier Event Planning for the Washington, DC area. Events, Corporate Events, Parties, Weddings, and Celebrations.">
+  <meta name="keywords" content="events,weddings,parties,celebrations,corporate events, washington, dc, event planning, event planner">
 
-  <title>Swann Planning - Celebrations</title>
+  <title>Swann Planning - DC's Premier Event Planner - About</title>
 
   <!-- CSS -->
   <link href="../assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -110,7 +110,7 @@
                   Born in Texas and raised in Georgia, India is a southern lady who has always been called the social butterfly amongst her family, friends, and peers. While growing up, she developed a niched for making a simple gathering extravagant and fun. India attended howard university and earned a Bachelor’s degree in radio, television, and film. After coordinating and developing a love for events throughout her collegiate career, India took a leap of faith to become D.C.’s next elite event planner. <br/>
                 </p>
                 <p class="description">
-                  After nearly a decade of coordinating weddings, fundraisers, pageants, and meetings, India can now be called an entrepreneur. CEO and Founder of Swann Planning, LLC., India strives to design an event to remember.<br/>
+                  After nearly a decade of coordinating weddings, fundraisers, pageants, and meetings, India can now be called an entrepreneur. CEO and Founder of Swann Planning, L.L.C., India strives to design an event to remember.<br/>
                 </p>
                 <p class="description">
                   Swann Planning derives from India’s Desire and eagerness for people gathering and enjoying themselves. Over the years she has learned that it doesn’t take much to fulfill her desire. Simplicity can always transform into something unique and timeless, and India incorporates this method into even design.<br/>
@@ -393,7 +393,7 @@
         <div class="row">
 
           <div class="col-sm-6">
-            <p class="copyright font-alt">© 2016 <a href="../index.html">Swann Planning, LLC</a>, All Rights Reserved.</p>
+            <p class="copyright font-alt">© 2016 <a href="../index.html">Swann Planning, L.L.C.</a>, All Rights Reserved.</p>
           </div>
 
           <div class="col-sm-6">
