--- a/profiles/celebrations/birthdays.html
+++ b/profiles/celebrations/birthdays.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Swann Planning - Celebrations, Premier Event Planning for the Washington, DC area. Events, Corporate Events, Parties, Weddings, Birthdays, and Celebrations.">
+  <meta name="keywords" content="events,weddings,parties,celebrations,corporate events,birthdays,bar-mitzvah,bat-mitzvah,milestones,corporate,meetings,holiday,washington,dc,event planning,event planner">
 
-  <title>Swann Planning - Celebrations</title>
+  <title>Swann Planning - DC's Premier Event Planner - Birthdays</title>
 
   <!-- CSS -->
   <link href="../../assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
