--- a/profiles/corporate/meetings.html
+++ b/profiles/corporate/meetings.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Swann Planning - Corporate Meetings, Premier Event Planning for the Washington, DC area. Events, Corporate Events, Parties, Weddings, and Celebrations.">
+  <meta name="keywords" content="events,weddings,parties,celebrations,corporate events,corporate,meetings,washington,dc,event planning,event planner">
 
-  <title>Swann Planning - Corporate Events</title>
+  <title>Swann Planning - DC's Premier Event Planner - Corporate Meetings</title>
 
   <!-- CSS -->
   <link href="../../assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
