--- a/profiles/weddings/petite_planning.html
+++ b/profiles/weddings/petite_planning.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Swann Planning Petite Wedding Planning - Premier Event Planning for the Washington, DC area. Events, Corporate Events, Parties, Weddings, and Celebrations.">
+  <meta name="keywords" content="events,weddings,parties,celebrations,corporate events, washington, dc, event planning, event planner">
 
-  <title>Swann Planning - Petite Wedding Planning</title>
-
+  <title>Swann Planning - DC's Premier Event Planner - Petite Wedding Planning</title>
+  
   <!-- CSS -->
   <link href="../../assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="../../assets/css/simpletextrotator.css" rel="stylesheet">
