Social and html cleanup

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 		<hr class="divider-w">
 		<!-- Divider -->
 
-		<section class="module bg-dark-60" data-background="assets/images/section-6.jpg">
+		<section class="module bg-dark-60" data-background="assets/images/section-1.jpg">
 			<div class="container">
 				<div class="row">
 				</div>
@@ -337,34 +337,26 @@
 				<div class="row">
           <div class="col-sm-12 col-sm-offset-3">
             <ul id="greetings-grid" class="works-grid works-grid-gut works-hover-w">
-              <li class="work-item corporate">
+              <li class="work-item team-item corporate">
                 <a href="profiles/about.html">
-                  <div class="work-image greetings-image">
+                  <div class="work-image team-image greetings-image">
                     <img src="./assets/images/swann_profile_photos/headshot_new.jpg" alt="" class="team-image profile-image">
                   </div>
                   <div class="team-name color-purple strong testimonial-text font-serif large-text">India Howard</div>
                   <div class="team-role large-text testimonial-text font-serif">Founder/CEO</div>
                   <div class="work-caption font-alt">
                     <h3 class="work-title">Meet &amp; Learn More About The Founder</h3>
+                    <div class="team-social">
+                      <a href="#"><i class="fa fa-facebook"></i></a>
+                      <a href="#"><i class="fa fa-twitter"></i></a>
+                      <a href="#"><i class="fa fa-dribbble"></i></a>
+                      <a href="#"><i class="fa fa-skype"></i></a>
+                    </div>
                   </div>
                 </a>
               </li>
             </ul>
           </div>
-          <!--<div class="col-sm-8 col-md-offset-2">-->
-            <!--<div class="module-subtitle story font-serif">-->
-              <!--Born in Texas and raised in Georgia, India is a southern lady who has always been called the social butterfly amongst her family, friends, and peers. While growing up, she developed a niched for making a simple gathering extravagant and fun. India attended howard university and earned a Bachelor’s degree in radio, television, and film. After coordinating and developing a love for events throughout her collegiate career, India took a leap of faith to become D.C.’s next elite event planner-->
-
-              <!--After nearly a decade of coordinating weddings, fundraisers, pageants, and meetings, India can now be called an entrepreneur. CEO and Founder of Swann Planning, L.L.C., India strives to design an event to remember.-->
-
-              <!--Swann Planning derives from India’s Desire and eagerness for people gathering and enjoying themselves. Over the years she has learned that it doesn’t take much to fulfill her desire. Simplicity can always transform into something unique and timeless, and India incorporates this method into even design.-->
-
-              <!--“I bring the ‘less is more’ approach to the design process, along with creativity and passion. Combined with my clients’ inspiration, this approach allows a vision to transform into an elegant event.”-->
-
-              <!-&#45;&#45; India R. Howard-->
-            <!--</div>-->
-          <!--</div>-->
-					<!-- Team item end -->
 				</div><!-- .row -->
 
 			</div>
@@ -372,7 +364,7 @@
 		<!-- Team end -->
 
 		<!-- Testimonials start -->
-		<section class="module bg-dark-60 pt-0 pb-0" data-background="assets/images/section-7.jpg">
+		<section class="module bg-dark-60 pt-0 pb-0" data-background="assets/images/section-1.jpg">
 
 			<div class="testimonials-slider pt-140 pb-140">
 				<ul class="slides">
