--- a/profiles/celebrations/milestones_moments.html
+++ b/profiles/celebrations/milestones_moments.html
@@ -97,9 +97,7 @@
     <!-- Portfolio single start -->
     <section class="module">
       <div class="container">
-
         <div class="row">
-
           <div class="col-sm-12">
             <div class="portfolio-item">
               <img class="portfolio-image" src="../../assets/images/celebrations/milestones.jpg" alt="">
@@ -112,88 +110,9 @@
                   </p>
                 </div>
               </div>
-
             </div>
           </div>
-
         </div><!-- .row -->
-
-        <!--<div class="row multi-columns-row">-->
-
-          <!--&lt;!&ndash; Alt features item start &ndash;&gt;-->
-          <!--<div class="col-sm-6 col-md-4 col-lg-4">-->
-
-            <!--<div class="alt-features-item">-->
-              <!--<div class="alt-features-icon">-->
-                <!--<span class="icon-tools-2"></span>-->
-              <!--</div>-->
-              <!--<h3 class="alt-features-title font-alt">Development</h3>-->
-              <!--A wonderful serenity has taken possession of my entire soul like these sweet mornings.-->
-            <!--</div>-->
-
-          <!--</div>-->
-          <!--&lt;!&ndash; Alt features item end &ndash;&gt;-->
-
-          <!--&lt;!&ndash; Alt features item start &ndash;&gt;-->
-          <!--<div class="col-sm-6 col-md-4 col-lg-4">-->
-
-            <!--<div class="alt-features-item">-->
-              <!--<div class="alt-features-icon">-->
-                <!--<span class="icon-tools"></span>-->
-              <!--</div>-->
-              <!--<h3 class="alt-features-title font-alt">Design</h3>-->
-              <!--A wonderful serenity has taken possession of my entire soul like these sweet mornings.-->
-            <!--</div>-->
-
-          <!--</div>-->
-          <!--&lt;!&ndash; Alt features item end &ndash;&gt;-->
-
-          <!--&lt;!&ndash; Alt features item start &ndash;&gt;-->
-          <!--<div class="col-sm-6 col-md-4 col-lg-4">-->
-
-            <!--<div class="alt-features-item">-->
-              <!--<div class="alt-features-icon">-->
-                <!--<span class="icon-camera"></span>-->
-              <!--</div>-->
-              <!--<h3 class="alt-features-title font-alt">Photography</h3>-->
-              <!--A wonderful serenity has taken possession of my entire soul like these sweet mornings.-->
-            <!--</div>-->
-
-          <!--</div>-->
-          <!--&lt;!&ndash; Alt features item end &ndash;&gt;-->
-
-        <!--</div>&lt;!&ndash; .row &ndash;&gt;-->
-
-        <!-- Divider -->
-        <!--<hr class="divider-w mt-60 mb-60">-->
-        <!--&lt;!&ndash; Divider &ndash;&gt;-->
-
-        <!--<div class="row multi-columns-row">-->
-
-          <!--&lt;!&ndash; Work details start &ndash;&gt;-->
-          <!--<div class="col-sm-6 col-md-4 col-lg-4">-->
-            <!--<div class="work-details">-->
-              <!--<h5 class="work-details-title font-alt">Project Details</h5>-->
-              <!--<ul>-->
-                <!--<li><strong>Client:</strong><span class="font-serif"> SomeCompany</span></li>-->
-                <!--<li><strong>Date:</strong><span class="font-serif"> 23 November, 2015</span></li>-->
-                <!--<li><strong>Online:</strong><span class="font-serif"> <a href="#" target="_blank">www.example.com</a></span></li>-->
-              <!--</ul>-->
-            <!--</div>-->
-          <!--</div>-->
-          <!--&lt;!&ndash; Work details end &ndash;&gt;-->
-
-          <!--<div class="col-sm-6 col-md-4 col-lg-4">-->
-            <!--<p>The languages only differ in their grammar, their pronunciation and their most common words. Everyone realizes why a new common language would be desirable: one could refuse to pay expensive translators.</p>-->
-            <!--<p>Their separate existence is a myth. For science, music, sport, etc, Europe uses the same vocabulary.</p>-->
-          <!--</div>-->
-
-          <!--<div class="col-sm-6 col-md-4 col-lg-4">-->
-            <!--<p>The languages only differ in their grammar, their pronunciation and their most common words. Everyone realizes why a new common language would be desirable: one could refuse to pay expensive translators.</p>-->
-          <!--</div>-->
-
-        <!--</div>&lt;!&ndash; .row &ndash;&gt;-->
-
       </div>
     </section>
     <!-- Portfolio single end -->
@@ -202,88 +121,12 @@
     <hr class="divider-w">
     <!-- Divider -->
 
-    <!--&lt;!&ndash; Related projects start &ndash;&gt;-->
-    <!--<section class="module">-->
-      <!--<div class="container">-->
-
-        <!--<div class="row">-->
-
-          <!--<div class="col-sm-6 col-sm-offset-3">-->
-
-            <!--<h2 class="module-title font-alt">Related Projects</h2>-->
-
-          <!--</div>-->
-
-        <!--</div>&lt;!&ndash; .row &ndash;&gt;-->
-
-        <!--&lt;!&ndash; Portfolio list start &ndash;&gt;-->
-        <!--<ul id="works-grid" class="works-grid works-grid-gut works-grid-3 works-hover-w">-->
-
-          <!--&lt;!&ndash; Portfolio item start &ndash;&gt;-->
-          <!--<li class="work-item illustration webdesign">-->
-            <!--<a href="portfolio-single-1.html">-->
-              <!--<div class="work-image">-->
-                <!--<img src="../../images/work-1.jpg" alt="">-->
-              <!--</div>-->
-              <!--<div class="work-caption font-alt">-->
-                <!--<h3 class="work-title">Corporate Identity</h3>-->
-                <!--<div class="work-descr">-->
-                  <!--Illustration-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</a>-->
-          <!--</li>-->
-          <!--&lt;!&ndash; Portfolio item end &ndash;&gt;-->
-
-          <!--&lt;!&ndash; Portfolio item start &ndash;&gt;-->
-          <!--<li class="work-item marketing photography">-->
-            <!--<a href="portfolio-single-1.html">-->
-              <!--<div class="work-image">-->
-                <!--<img src="../../images/work-2.jpg" alt="">-->
-              <!--</div>-->
-              <!--<div class="work-caption font-alt">-->
-                <!--<h3 class="work-title">Bag MockUp</h3>-->
-                <!--<div class="work-descr">-->
-                  <!--Marketing-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</a>-->
-          <!--</li>-->
-          <!--&lt;!&ndash; Portfolio item end &ndash;&gt;-->
-
-          <!--&lt;!&ndash; Portfolio item start &ndash;&gt;-->
-          <!--<li class="work-item illustration photography">-->
-            <!--<a href="portfolio-single-1.html">-->
-              <!--<div class="work-image">-->
-                <!--<img src="../../images/work-3.jpg" alt="">-->
-              <!--</div>-->
-              <!--<div class="work-caption font-alt">-->
-                <!--<h3 class="work-title">Disk Cover</h3>-->
-                <!--<div class="work-descr">-->
-                  <!--Illustration-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</a>-->
-          <!--</li>-->
-          <!--&lt;!&ndash; Portfolio item end &ndash;&gt;-->
-
-        <!--</ul>-->
-        <!--&lt;!&ndash; Portfolio list end &ndash;&gt;-->
-
-      <!--</div>-->
-    <!--</section>-->
-    <!--&lt;!&ndash; Related projects end &ndash;&gt;-->
-
     <!-- Widgets start -->
     <div class="module-small bg-dark">
       <div class="container">
-
         <div class="row">
-
           <div class="row">
-
             <div class="col-sm-3">
-
               <!-- Widget start -->
               <div class="widget">
                 <h5 class="widget-title font-alt">Get in Touch!</h5>
@@ -294,85 +137,8 @@
               <!-- Widget end -->
 
             </div>
-
-
-          <!--<div class="col-sm-3">-->
-
-            <!--&lt;!&ndash; Widget start &ndash;&gt;-->
-            <!--<div class="widget">-->
-              <!--<h5 class="widget-title font-alt">Recent Comments</h5>-->
-              <!--<ul class="icon-list">-->
-                <!--<li>Maria on <a href="#">Designer Desk Essentials</a></li>-->
-                <!--<li>John on <a href="#">Realistic Business Card Mockup</a></li>-->
-                <!--<li>Andy on <a href="#">Eco bag Mockup</a></li>-->
-                <!--<li>Jack on <a href="#">Bottle Mockup</a></li>-->
-                <!--<li>Mark on <a href="#">Our trip to the Alps</a></li>-->
-              <!--</ul>-->
-            <!--</div>-->
-            <!--&lt;!&ndash; Widget end &ndash;&gt;-->
-
-          <!--</div>-->
-
-          <!--<div class="col-sm-3">-->
-
-            <!--&lt;!&ndash; Widget start &ndash;&gt;-->
-            <!--<div class="widget">-->
-              <!--<h5 class="widget-title font-alt">Categories</h5>-->
-              <!--<ul class="icon-list">-->
-                <!--<li><a href="#">Photography - 7</a></li>-->
-                <!--<li><a href="#">Web Design - 3</a></li>-->
-                <!--<li><a href="#">Illustration - 12</a></li>-->
-                <!--<li><a href="#">Marketing - 1</a></li>-->
-                <!--<li><a href="#">WordPress - 16</a></li>-->
-              <!--</ul>-->
-            <!--</div>-->
-            <!--&lt;!&ndash; Widget end &ndash;&gt;-->
-
-          <!--</div>-->
-
-          <!--<div class="col-sm-3">-->
-
-            <!--&lt;!&ndash; Widget start &ndash;&gt;-->
-            <!--<div class="widget">-->
-              <!--<h5 class="widget-title font-alt">Popular posts</h5>-->
-              <!--<ul class="widget-posts">-->
-
-                <!--<li class="clearfix">-->
-                  <!--<div class="widget-posts-image">-->
-                    <!--<a href="#"><img src="../../images/rp-1.jpg" alt=""></a>-->
-                  <!--</div>-->
-                  <!--<div class="widget-posts-body">-->
-                    <!--<div class="widget-posts-title">-->
-                      <!--<a href="#">Designer Desk Essentials</a>-->
-                    <!--</div>-->
-                    <!--<div class="widget-posts-meta">-->
-                      <!--23 November-->
-                    <!--</div>-->
-                  <!--</div>-->
-                <!--</li>-->
-
-                <!--<li class="clearfix">-->
-                  <!--<div class="widget-posts-image">-->
-                    <!--<a href="#"><img src="../../images/rp-2.jpg" alt=""></a>-->
-                  <!--</div>-->
-                  <!--<div class="widget-posts-body">-->
-                    <!--<div class="widget-posts-title">-->
-                      <!--<a href="#">Realistic Business Card Mockup</a>-->
-                    <!--</div>-->
-                    <!--<div class="widget-posts-meta">-->
-                      <!--15 November-->
-                    <!--</div>-->
-                  <!--</div>-->
-                <!--</li>-->
-
-              <!--</ul>-->
-            <!--</div>-->
-            <!--&lt;!&ndash; Widget end &ndash;&gt;-->
-
-          <!--</div>-->
-
+          </div>
         </div><!-- .row -->
-
       </div>
     </div>
     <!-- Widgets end -->
