Fixing typo in glamgal

--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
             <p><a href="http://www.jonstrem.com/" target="_blank">Jon Strem</a></p>
             <p><a href="http://www.rdionefoto.com/" target="_blank">R. Dione Foto</a></p>
             <p><a href="http://www.nosegayflowers.com/" target="_blank">NoseGay Flowers</a></p>
-            <p><a href="https://www.instagram.com/glamgal85/" target="_blank">@GlameGal85</a></p>
+            <p><a href="https://www.instagram.com/glamgal85/" target="_blank">@GlamGal85</a></p>
           </div>
         </div><!-- .row -->
 
