--- a/profiles/celebrations/anniversaries.html
+++ b/profiles/celebrations/anniversaries.html
@@ -108,7 +108,7 @@
                   <h1>Anniversaries</h1>
                   <p class="description">
                     To celebrate love with someone, for eternity, is an accomplishment…<br/>
-                    Swann Planning will portray this love others may desire.
+                    Swann Planning will portray this love for others to admire.
                   </p>
                 </div>
               </div>
