--- a/profiles/celebrations/birthdays.html
+++ b/profiles/celebrations/birthdays.html
@@ -108,7 +108,7 @@
                   <h1>Birthdays</h1>
                   <p class="description">
                     Life is valued from joyful moments… <br />
-                    On your special day, Swann Planning adds another joyful moment from celebrating life.
+                    On your special day, Swann Planning adds another joyful moment from celebrating another year of life.
                   </p>
                 </div>
               </div>
