--- a/profiles/weddings/petite_planning.html
+++ b/profiles/weddings/petite_planning.html
@@ -71,7 +71,9 @@
             <div class="col-sm-6 col-sm-offset-3">
               <h1 class="module-title font-alt">Petite Wedding Planning</h1>
               <div class="module-subtitle font-serif mb-0">
-                “On the road to <span class="color-purple">matrimony</span>, there's nothing wrong with telling all the jovial news... In fact, Swann Planning will help spread the <span class="color-purple">news</span>!"
+                “On the road to matrimony, there&#39;s nothing wrong with telling all the jovial news... In
+
+                fact, Swann Planning will help market and spread the <span class="color-purple">word</span>!"
               </div>
             </div>
           </div><!-- .row -->
@@ -90,25 +92,25 @@
                   <div class="inner-overlay col-xs-8 col-xs-offset-2">
                     <h1>Petite Wedding Planning </h1>
                     <h3>Day-of Planning</h3>
-                    <p class="description">
-                      Petite Planning package is best for
+                    <!--<p class="description">-->
+                      <!--Petite Planning package is best for-->
 
-                      couples who have all details, vendor
+                      <!--couples who have all details, vendor-->
 
-                      contracts, and schedules confirmed,
+                      <!--contracts, and schedules confirmed,-->
 
-                      but simply need supervision to make
+                      <!--but simply need supervision to make-->
 
-                      sure everything goes as planned.
+                      <!--sure everything goes as planned.-->
 
-                      Petite Planning consists of thorough
+                      <!--Petite Planning consists of thorough-->
 
-                      review of all details and rehearsals to
+                      <!--review of all details and rehearsals to-->
 
-                      ensure the special day goes as
+                      <!--ensure the special day goes as-->
 
-                      smooth as possible.
-                    </p>
+                      <!--smooth as possible.-->
+                    <!--</p>-->
                   </div>
                 </div>
               </div>
