--- a/profiles/weddings/premier_planning.html
+++ b/profiles/weddings/premier_planning.html
@@ -67,10 +67,11 @@
       <section class="module bg-dark bg-dark-60" data-background="assets/images/section-4.jpg">
         <div class="container">
           <div class="row">
-            <div class="col-sm-6 col-sm-offset-3">
+            <div class="col-sm-8 col-sm-offset-2">
               <h1 class="module-title font-alt">Premier Wedding Planning</h1>
               <div class="module-subtitle font-serif mb-0">
-                "The joining of two people in love, who yearn to be with each other forever seems like a <span class="color-purple">fairytale</span> Swann Planning transforms that fairytale into <span class="color-purple">reality</span>."
+                "The joining of two people in love who yearn to be with each other forever seems like a <span class="color-purple">fairytale</span>...<br/>
+                Swann Planning strives to transform that fairytale into <span class="color-purple">reality</span>."
               </div>
             </div>
           </div><!-- .row -->
@@ -89,25 +90,15 @@
                   <div class="inner-overlay col-xs-8 col-xs-offset-2">
                     <h1>Premier Wedding Planning </h1>
                     <p class="description">
-                      Premier Planning package dedicates
+                      Premier Planning package dedicates planning services from conception to completion
 
-                      planning services from conception to
+                      for the couple’s big day. Clients are offered a list of Swann Planning preferred vendors
 
-                      completion for the couple’s big day.
+                      that are trusted to ensure quality services and fulfillment of needs. Premier Planning
 
-                      Clients are offered a list of Swann
+                      package also provides Post-Wedding Day mailing and final vendor payments for the
 
-                      Planning preferred vendors that are
-
-                      trusted to ensure quality services and
-
-                      fulfillment of needs. Premier Planning
-
-                      package also provides Post-Wedding
-
-                      Day mailing and final payments for
-
-                      the newlyweds.
+                      newlyweds.
                     </p>
                   </div>
                 </div>
