--- a/profiles/corporate/corp_celebration.html
+++ b/profiles/corporate/corp_celebration.html
@@ -43,7 +43,7 @@
         <div class="collapse navbar-collapse" id="custom-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Monumental Celebrations</a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Corporate Events</a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="../weddings/premier_planning.html">Premier Wedding Planning</a></li>
                 <li><a href="../weddings/partial_planning.html">Partial Wedding Planning</a></li>
@@ -91,8 +91,8 @@
                   <div class="inner-overlay col-xs-8 col-xs-offset-2">
                     <h1>Monumental Celebrations</h1>
                     <p class="description">
-                      Swann Planning events create that loose atmosphere employees look for at a company event...<br />
-                      When this is done right, it gives employees a sense of accomplishment you couldn't imagine.
+                      Swann Planning events create that loose and fun atmosphere employees look for at a company event...<br />
+                      When this is done right, it gives employees a sense of accomplishment you could only imagine.
                     </p>
                   </div>
                 </div>
