--- a/profiles/corporate/holiday.html
+++ b/profiles/corporate/holiday.html
@@ -94,7 +94,8 @@
                   <div class="inner-overlay col-xs-8 col-xs-offset-2">
                     <h1>Holiday Soiree</h1>
                     <p class="description">
-                      During the most wonderful time of the year... <br /> It's important to Swann Planning to create a jovial moment for your company.
+                      During the most wonderful time of the year...<br />
+                      It's important to Swann Planning to create a jubilant moment for your colleagues to remember.
                     </p>
                   </div>
                 </div>
