--- a/profiles/corporate/meetings.html
+++ b/profiles/corporate/meetings.html
@@ -43,7 +43,7 @@
         <div class="collapse navbar-collapse" id="custom-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Meetings</a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Corporate Events</a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="../weddings/premier_planning.html">Premier Wedding Planning</a></li>
                 <li><a href="../weddings/partial_planning.html">Partial Wedding Planning</a></li>
