Updates to titles and uncommenting paragraph

--- a/profiles/corporate/meetings.html
+++ b/profiles/corporate/meetings.html
@@ -71,7 +71,7 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-6 col-sm-offset-3">
-              <h1 class="module-title font-alt">Meetings</h1>
+              <h1 class="module-title font-alt">Corporate Events</h1>
               <div class="module-subtitle font-serif mb-0">
                 “<span class="color-purple">Success</span> in Corporate America is achieved with a healthy balance of work and play… Swann Planning can find that <span class="color-purple">equilibrium</span> with every event for your company."
               </div>
