--- a/profiles/weddings/petite_planning.html
+++ b/profiles/weddings/petite_planning.html
@@ -91,26 +91,26 @@
                 <div class="portfolio-overlay">
                   <div class="inner-overlay col-xs-8 col-xs-offset-2">
                     <h1>Petite Wedding Planning </h1>
-                    <h3>Day-of Planning</h3>
-                    <!--<p class="description">-->
-                      <!--Petite Planning package is best for-->
+                    <h3>"Day-of Planning"</h3>
+                    <p class="description">
+                      Petite Planning package is best for
 
-                      <!--couples who have all details, vendor-->
+                      couples who have all details, vendor
 
-                      <!--contracts, and schedules confirmed,-->
+                      contracts, and schedules confirmed,
 
-                      <!--but simply need supervision to make-->
+                      but simply need supervision to make
 
-                      <!--sure everything goes as planned.-->
+                      sure everything goes as planned.
 
-                      <!--Petite Planning consists of thorough-->
+                      Petite Planning consists of thorough
 
-                      <!--review of all details and rehearsals to-->
+                      review of all details and rehearsals to
 
-                      <!--ensure the special day goes as-->
+                      ensure the special day goes as
 
-                      <!--smooth as possible.-->
-                    <!--</p>-->
+                      smooth as possible.
+                    </p>
                   </div>
                 </div>
               </div>
