--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Swann Planning - Premier Event Planning for the Washington, DC area. Events, Corporate Events, Parties, Weddings, and Celebrations.">
 	<meta name="keywords" content="events,weddings,parties,celebrations,corporate events, washington, dc, event planning, event planner">
 
-	<title>Swann Planning - DC's Premier Event Planner</title>
+	<title>Swann Planning - DC's Premier Event Planning Firm</title>
 	
 	<!-- CSS -->
 	<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
